fixed buttons on iphone showing in blue color

--- a/src/assets/styles/components/restaurant/_restaurant-page-filters.scss
+++ b/src/assets/styles/components/restaurant/_restaurant-page-filters.scss
@@ -20,6 +20,7 @@
         height: 100%;
         padding: 0 20px;
         white-space: nowrap;
+        color: black;
 
         &:hover {
             cursor: pointer;
