--- a/src/assets/styles/pages/_home-page.scss
+++ b/src/assets/styles/pages/_home-page.scss
@@ -200,7 +200,7 @@
 
                     button {
                         background-color: transparent;
-                        border: 0.5px solid;
+                        border: 0.5px solid black;
                         border-radius: 10px;
                         display: flex;
                         align-items: center;
@@ -208,6 +208,7 @@
                         gap: 7px;
                         padding: 7px 12px;
                         width: 180px;
+                        color: black;
 
                         p {
                             text-align: center;
